--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@create-figma-plugin/build": "^3.0.2",
     "@create-figma-plugin/tsconfig": "^3.0.2",
     "@figma/plugin-typings": "^1.79.0",
+    "@types/react": "^18.2.32",
+    "autoprefixer": "^10.4.16",
     "bun-types": "latest",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": ">=4"
   },
   "scripts": {
     "build": "build-figma-plugin --typecheck --minify",
-    "watch": "build-figma-plugin --typecheck --watch"
+    "watch": "build-figma-plugin --typecheck --watch",
+    "watch:css": "tailwindcss -i ./src/input.css -o ./src/styles.css --watch"
   },
   "figma-plugin": {
     "editorType": [
