--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bun-types": "latest",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
-    "typescript": ">=4"
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "build": "build-figma-plugin --typecheck --minify",
@@ -32,6 +32,7 @@
     "ui": "src/ui.tsx"
   },
   "name": "property-inspector",
+  "version": "v0.1.1",
   "module": "index.ts",
   "type": "module"
 }
